clusters/talos-dev/apps/jumphost/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: jumphost
spec:
  selector:
    app: webtop
  ports:
    - port: 80
      targetPort: http
